--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
+    "swiper": "^11.0.5",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
